--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p id="mensagem-validacao">Apenas letras minúsculas e sem acento.</p>
     </main>
     <footer>
-        <p>Desenvolvido por Seu Nome - 2023</p>
+        <p>Desenvolvido por Bruno Souza- 2024</p>
     </footer>
     <script src="app.js"></script>
 </body>
